Fix design on safari (content was always higher than viewport)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,19 +1,18 @@
-html {
-	min-height: 100%;
-}
-
 body {
 	background-color: #657887;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #ffffff;
-	height: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
+	display: flex;
+	justify-content: space-between;
 }
 
 html, body {
+	min-height: 100%;
+	height: auto;
     margin: 0px;
     padding: 0px;
 }
@@ -187,6 +186,7 @@ main {
 	justify-content: space-between;
 	min-height: calc(100% - 80px);
 	padding: 40px 75px;
+	width: calc(100% - 150px);
 }
 
 .github-icon {
@@ -204,6 +204,7 @@ main {
 		flex-direction: column;
 		min-height: calc(100% - 60px);
 		padding: 20px 40px 40px;
+		width: calc(100% - 80px);
 	}
 
 	#box-participants-wrapper, #box-main, #box-menu {
